# min-caml-rust

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  check-test-mls.sh  lin.ml
.github/workflows/: rust.yml
assets/: stub.c
assets/x86_64/: libmincaml.S
graph_util/: Cargo.toml
graph_util/src/: lib.rs
src/: alpha.rs  assoc.rs  beta.rs  closure.rs  const_fold.rs  elim.rs  id.rs  inline.rs  k_normal.rs  lib.rs  main.rs  parser.rs  syntax.rs  typing.rs  util.rs
src/arm64/: asm.rs  instr.rs  mod.rs  reg_alloc.rs  simm.rs  virtual_asm.rs
src/x86/: asm.rs  emit.rs  error.rs  instr.rs  mod.rs  reg_alloc.rs  simm.rs  virtual_asm.rs
src/x86_64/: asm.rs  emit.rs  instr.rs  mod.rs  reg_alloc.rs  simm.rs  virtual_asm.rs
test/: tuple_of_tuple.ml  tuple_of_tuple_const_folded.ml
