[package]
name = "min-caml-rust"
version = "0.1.0"
authors = ["koba-e964 <3303362+koba-e964@users.noreply.github.com>"]
publish = false
edition = "2021"
rust-version = "1.74"

[dependencies]
nom = "7"
ordered-float = "4"
lazy_static = "1"
graph_util = { path = "./graph_util" }

[profile.dev]
debug = false

[profile.test]
debug = false
